src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Charity__c</fullName>
        <label>Charity</label>
        <picklist>
            <picklistValues>
                <fullName>THE GAVI FUND AFFILIATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCER RESEARCH UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THE SAVE THE CHILDREN FUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROYAL COMMONWEALTH SOCIETY FOR THE BLIND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MACMILLAN CANCER SUPPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Convicted_of_a_Criminal_Offence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convicted of a Criminal Offence?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details_of_Criminal_Offence__c</fullName>
        <label>Details of Criminal Offence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_to_Work_in_the_UK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible to Work in the UK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experience_Type__c</fullName>
        <globalPicklist>Experience_Type</globalPicklist>
        <label>Experience Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Education_Level__c</fullName>
        <globalPicklist>Final_Level_of_Education</globalPicklist>
        <label>Final Education Level</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Position__c</fullName>
        <globalPicklist>Position</globalPicklist>
        <label>Last Position</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Travel_Distance__c</fullName>
        <label>Max Travel Distance</label>
        <picklist>
            <picklistValues>
                <fullName>Over 25 miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 25 miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No more than 10 miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under 5 miles</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Charity__c</fullName>
        <label>Other Charity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Languages__c</fullName>
        <label>Other Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Qualifications__c</fullName>
        <label>Other Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Profile Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skype_Id__c</fullName>
        <label>Skype Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Frequency_Type_Monthly__c</fullName>
        <globalPicklist>Work_Frequency_Type_Monthly</globalPicklist>
        <label>Work Frequency Type - Monthly</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Frequency_Type_Weekly__c</fullName>
        <globalPicklist>Work_Frequency_Type_Weekly</globalPicklist>
        <label>Work Frequency Type - Weekly</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_from_home__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work from home?</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Candidate</fullName>
        <active>true</active>
        <label>Candidate</label>
    </recordTypes>
</CustomObject>